config/gateway/gateway-plugin/gateway-plugin.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-plugins
  namespace: aibrix-system
  labels:
    app: gateway-plugins
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: gateway-plugins
  ports:
    - name: gateway
      protocol: TCP
      port: 50052
      targetPort: 50052
    - name: profiling
      protocol: TCP
      port: 6060
      targetPort: 6060
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-plugins
  namespace: aibrix-system
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 1
  selector:
    matchLabels:
      app: gateway-plugins
  template:
    metadata:
      labels:
        app: gateway-plugins
    spec:
      affinity:
        podAntiAffinity: # pods are placed on different nodes
           preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - gateway-plugins
                topologyKey: "kubernetes.io/hostname"
        nodeAffinity: # prevent gateway pod to be placed on gpu node.
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
                - key: nvidia.com/gpu.present
                  operator: NotIn
                  values:
                    - "true"
      containers:
        - name: gateway-plugin
          image: gateway-plugins:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: gateway
              containerPort: 50052
            - name: profiling
              containerPort: 6060
            - name: metrics
              containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 1
              memory: 1Gi
          livenessProbe:
            grpc:
              port: 50052
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            grpc:
              port: 50052
            initialDelaySeconds: 5
            periodSeconds: 10
      serviceAccountName: aibrix-gateway-plugins
---
# this is a dummy route for incoming request to list models registered to aibrix-control-plane
# TODO (varun): check if this dummy route can be removed in future
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reserved-router-models-endpoint
  namespace: aibrix-system
spec:
  parentRefs:
    - name: aibrix-eg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/models
      backendRefs:
        - name: aibrix-metadata-service
          port: 8090
---
# this is a dummy route for incoming request and,
# then request is routed to httproute using model name OR
# request is routed based on the target for that model service
# TODO (varun): check if this dummy route can be removed in future
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reserved-router
  namespace: aibrix-system
spec:
  parentRefs:
    - name: aibrix-eg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: aibrix-gateway-plugins
          port: 50052
